fix titles alignment

--- a/src/app/Lab-operations/exercises/exercises.component.css
+++ b/src/app/Lab-operations/exercises/exercises.component.css
@@ -168,3 +168,7 @@
     padding-right: 1rem;
     padding-top: 1em;
   }
+
+  .title {
+    margin-top: 0.8em;
+  }
